# ai-usage-dashboard

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  index.html  install-idle-task.ps1  install-screensaver.ps1  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml  security.yml
docs/build-week/: DEVPOST_SUBMISSION.md
docs/releases/: v0.2.0.md  v0.3.0.md
mocks/: claude_normal.json  codex_normal.json  deepseek_normal.json  grok_credits_normal.json  grok_monthly_normal.json
scripts/: make-icons.mjs  viewport-check.mjs
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cache.rs  config.rs  fs_util.rs  lib.rs  main.rs  mock.rs  models.rs  secrets.rs  util.rs
src-tauri/src/fetchers/: claude.rs  codex.rs  deepseek.rs  grok.rs  mod.rs
src/components/: ClockHeader.tsx  CornerBrackets.tsx  ProgressMeter.tsx  ProviderSettings.tsx  Reticle.tsx  ServicePanel.tsx  SideRail.tsx  StatusChip.tsx  SystemStrip.tsx  TelemetryBar.tsx
