[package]
name = "ai-usage-dashboard"
version = "0.1.0"
description = "AI usage dashboard screensaver (Codex / Claude / DeepSeek)"
authors = ["neyha"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "ai_usage_dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["time", "rt", "sync"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
dirs = "5"

# Cross-platform secret store (macOS Keychain, Linux Secret Service).
# On Windows we read the credential directly (see secrets.rs) to match the
# exact target name written by the WinForms prototype.
[target.'cfg(not(windows))'.dependencies]
keyring = "3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Security_Credentials",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
