[package]
name = "ai-usage-dashboard"
version = "0.3.0"
description = "Local Windows desktop dashboard for Codex and Claude usage limits and DeepSeek API balance"
authors = ["neyham"]
license = "MIT"
repository = "https://github.com/neyham/ai-usage-dashboard"
homepage = "https://github.com/neyham/ai-usage-dashboard"
edition = "2021"
rust-version = "1.88"

[lib]
name = "ai_usage_dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["time", "rt", "sync"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
dirs = "5"

# Cross-platform secret store (macOS Keychain, Linux Secret Service).
# On Windows we read the credential directly (see secrets.rs) to match the
# exact target name written by the WinForms prototype.
[target.'cfg(not(windows))'.dependencies]
keyring = "3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Security_Credentials",
  "Win32_Storage_FileSystem",
  "Win32_System_IO",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
